proj1/tests/error/bad_height.tx
\textheight{3}
sdfs dsf sdf sdf sfds fsdf

\textheight{0}
sdfdsf sdfs fsdf